# effective-spoon

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  main.c
src/common/: common_types.h
src/game/: CMakeLists.txt  game.c  game.h  polyqueue.c  polyqueue.h
src/input/: CMakeLists.txt  input.c  input.h
src/poly/: CMakeLists.txt  polygeo.c  polygeo.h  polyline.c  polyline.h
test/: CMakeLists.txt  main.cpp  test_input.cpp  test_polygeo.cpp
test/data/: input.txt  input2.txt  lineread.txt  polylineread.txt
